[package]
name = "enum-select"
version = "0.1.2"
edition = "2021"
authors = [
  "Mearkatz <drquinsey@gmail.com>",
]
description = "A crate for selecting variants from enums."
license = "MIT"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
inquire = "0.7.5"
strum = "0.27.1"
strum_macros = "0.27.1"
